[gd_scene load_steps=5 format=3 uid="uid://dc5jp4i14v558"]

[ext_resource type="Script" path="res://Core/UI/MainMenu/Lobby/lobby_role_details.gd" id="1_e1ehg"]
[ext_resource type="Texture2D" uid="uid://ru211mekc33y" path="res://Core/UI/MainMenu/Lobby/heart_icon.png" id="2_b685s"]
[ext_resource type="Texture2D" uid="uid://b1vs0okbp4qj2" path="res://icon.svg" id="2_si1in"]
[ext_resource type="Texture2D" uid="uid://ddrdk7ohfatwf" path="res://Core/UI/MainMenu/Lobby/money_icon.png" id="3_5jowr"]

[node name="LobbyRoleDetails" type="PanelContainer"]
offset_right = 360.0
offset_bottom = 320.0
script = ExtResource("1_e1ehg")

[node name="LobbyRoleDetailsContainer" type="Control" parent="."]
layout_mode = 2

[node name="RoleName" type="Label" parent="LobbyRoleDetailsContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Role"
vertical_alignment = 2

[node name="RoleStatsContainer" type="Control" parent="LobbyRoleDetailsContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 48.0
offset_bottom = 72.0
grow_horizontal = 2

[node name="HealthIcon" type="TextureRect" parent="LobbyRoleDetailsContainer/RoleStatsContainer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 24.0
grow_vertical = 2
pivot_offset = Vector2(0, 12)
texture = ExtResource("2_b685s")
stretch_mode = 5

[node name="RoleHealth" type="Label" parent="LobbyRoleDetailsContainer/RoleStatsContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 36.0
offset_top = -1.0
offset_right = 100.0
offset_bottom = 1.0
grow_vertical = 2
pivot_offset = Vector2(0, 12)
theme_override_font_sizes/font_size = 20
text = "0"
vertical_alignment = 2
max_lines_visible = 1
visible_characters = 2
visible_ratio = 2.0

[node name="MoneyIcon" type="TextureRect" parent="LobbyRoleDetailsContainer/RoleStatsContainer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 100.0
offset_right = 124.0
grow_vertical = 2
pivot_offset = Vector2(0, 12)
texture = ExtResource("3_5jowr")
stretch_mode = 5

[node name="RoleMoney" type="Label" parent="LobbyRoleDetailsContainer/RoleStatsContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 136.0
offset_top = -1.0
offset_right = 200.0
offset_bottom = 1.0
grow_vertical = 2
pivot_offset = Vector2(0, 12)
theme_override_font_sizes/font_size = 20
text = "0"
vertical_alignment = 2
max_lines_visible = 1
visible_characters = 2
visible_ratio = 2.0

[node name="RoleInfoContainer" type="Control" parent="LobbyRoleDetailsContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 92.0
offset_bottom = 156.0
grow_horizontal = 2

[node name="RoleDescription" type="Label" parent="LobbyRoleDetailsContainer/RoleInfoContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_right = 270.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "This is a very long placeholder description for a role, that indicates its principal advantages."
horizontal_alignment = 3
autowrap_mode = 3
max_lines_visible = 3

[node name="RoleIcon" type="TextureRect" parent="LobbyRoleDetailsContainer/RoleInfoContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(80, 40)
size_flags_horizontal = 8
texture = ExtResource("2_si1in")
expand_mode = 1

[node name="RolePiecesTitle" type="Label" parent="LobbyRoleDetailsContainer"]
texture_filter = 2
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 172.0
offset_bottom = 198.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Pieces"
vertical_alignment = 2

[node name="RolePiecesContainer" type="Control" parent="LobbyRoleDetailsContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 206.0
offset_bottom = 246.0
grow_horizontal = 2

[node name="RolePiece" type="TextureRect" parent="LobbyRoleDetailsContainer/RolePiecesContainer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 40.0
grow_vertical = 2
texture = ExtResource("2_si1in")
expand_mode = 1

[node name="RolePiece2" type="TextureRect" parent="LobbyRoleDetailsContainer/RolePiecesContainer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 50.0
offset_right = 90.0
grow_vertical = 2
texture = ExtResource("2_si1in")
expand_mode = 1

[node name="RolePiece3" type="TextureRect" parent="LobbyRoleDetailsContainer/RolePiecesContainer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 100.0
offset_right = 140.0
grow_vertical = 2
texture = ExtResource("2_si1in")
expand_mode = 1

[node name="RolePiece4" type="TextureRect" parent="LobbyRoleDetailsContainer/RolePiecesContainer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 150.0
offset_right = 190.0
grow_vertical = 2
texture = ExtResource("2_si1in")
expand_mode = 1

[node name="RolePiece5" type="TextureRect" parent="LobbyRoleDetailsContainer/RolePiecesContainer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 200.0
offset_right = 240.0
grow_vertical = 2
texture = ExtResource("2_si1in")
expand_mode = 1
